--- a/templates/index.html
+++ b/templates/index.html
@@ -141,7 +141,7 @@
         <div class="items">
             <a href="/item/{{ item['_id'] }}">{{ item['title'] }}</a>
             {% if item.get('image_link') %}
-            <img src="{{ item['image_link'] }}" alt="{{ item['title'] }}" style="width:200px;height:200px;">
+            <img src="{{ item['image_link'] or 'https://upload.wikimedia.org/wikipedia/commons/d/d1/Image_not_available.png' }}" alt="{{ item['title'] }}" style="width:200px;height:200px;">
             {% endif %}
         {% if myitems %}
             <!-- Display activate/deactivate links only for My Items view -->
