--- a/templates/index.html
+++ b/templates/index.html
@@ -131,6 +131,9 @@
                 <a href="/items">My Items</a>
                 <a href="/favorites">My Favorites</a>
                 <a href="/logout">Logout</a>
+                {% if 'admin' in session %}
+                    <a href="/admin">Admin Panel</a>
+                {% endif %}
             {% else %}
                 <a href="/register">Register</a>
                 <a href="/login">Login</a>
