--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -68,5 +68,8 @@
             </ul>
         </div>
     </div>
+    <div class="back-to-home">
+        <a href="/">Back to Home</a>
+    </div>
 </body>
 </html>
