--- a/templates/admin_panel.html
+++ b/templates/admin_panel.html
@@ -16,7 +16,7 @@
         }
         .admin-header {
             width: 100%;
-            background-color: #333;
+            background-color: #007bff;
             color: white;
             padding: 20px 0;
             margin-bottom: 20px;
@@ -46,7 +46,7 @@
         }
         a {
             text-decoration: none;
-            color: #333;
+            color: #a80707;
         }
         .back-to-home {
             margin-top: 20px;
