--- a/templates/category.html
+++ b/templates/category.html
@@ -8,10 +8,10 @@
         body {
             font-family: Arial, sans-serif;
             margin: 0;
-            padding-bottom: 100px; /* Adjust based on your footer's height */
+            padding-bottom: 100px; 
             display: flex;
             flex-direction: column;
-            align-items: center; /* Center the content */
+            align-items: center; 
         }
 
         .header {
@@ -21,8 +21,8 @@
             background-color: #007bff;
             color: #fff;
             padding: 10px;
-            width: 100%; /* Make the header full width */
-            box-sizing: border-box; /* Ensure padding is included in width */
+            width: 100%;
+            box-sizing: border-box;
         }
 
         .header-content {
@@ -45,8 +45,8 @@
         }
 
         .categories-container {
-            position: absolute; /* Positioned absolutely */
-            top: 60px; /* Adjust as needed */
+            position: absolute; 
+            top: 60px; 
             left: 20px;
             padding: 10px;
             border-radius: 5px;
@@ -55,7 +55,7 @@
 
         .categories-label {
             position: absolute;
-            top: 20px; /* Adjust based on actual layout */
+            top: 20px; 
             left: 20px;
             color: #fff;
             padding: 5px 10px;
@@ -65,12 +65,11 @@
 
         .items {
             margin-top: 20px;
-            width: 80%; /* Adjust the width as needed */
+            width: 80%; 
             display: flex;
-            flex-direction: column; /* Items top to bottom */
-            align-items: center; /* Center items */
+            flex-direction: column; 
+            align-items: center;
         }
-
         .item {
             margin: 10px;
             text-align: center;
@@ -79,7 +78,7 @@
         .pagination {
             text-align: center;
             margin-top: 10px;
-            width: 100%; /* Make the pagination full width */
+            width: 100%; 
         }
 
         .footer {
