--- a/templates/register.html
+++ b/templates/register.html
@@ -9,10 +9,10 @@
 
         .container {
             padding: 16px;
-            background-color: white; /* Optional: for better visibility */
-            width: 100%; /* Full width */
-            max-width: 400px; /* Maximum width for the container */
-            margin: 0 auto; /* Centralize the container */
+            background-color: white; 
+            width: 100%;
+            max-width: 400px;
+            margin: 0 auto; 
         }
 
         input[type=text], input[type=password], input[type=tel] {
@@ -20,7 +20,7 @@
             padding: 15px;
             margin: 5px 0 22px 0;
             display: inline-block;
-            border: 1px solid #ccc; /* Optional: adds a border to the input */
+            border: 1px solid #ccc; 
             background: #f1f1f1;
         }
 
